--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "install": "^0.13.0",
     "lucide-react": "^0.546.0",
     "next": "^15.2.3",
+    "pnpm": "^10.19.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "socket.io-client": "^4.8.1",
