--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3030/api
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3030
